--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
     "recordrtc": "^5.6.2",
+    "universal-cookie": "^7.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
