--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "recordrtc": "^5.6.2",
     "universal-cookie": "^7.0.2",
